# gmx-top4py

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: black.yml  format.yml  tests.yml
examples/: amber99sb-star-ildnp.ff  ff_params.py
examples/advanced/: advanced.py  amber99sb-star-ildnp.ff  naa15.itp  naa50-naa15.top  naa50.itp  urea-times-2.top  urea_amber99sb_star_ildnp.top
examples/basic/: basic.py  urea.top
examples/data/: naa15.itp  naa50-naa15.top  naa50.itp  urea_amber99sb_star_ildnp.top
examples/ff_params/: ff_params.py  hexala.top
src/gmx_top4py/: __init__.py  constants.py  parameterizing.py  parsing.py  utils.py
src/gmx_top4py/topology/: atomic.py  ff.py  topology.py  utils.py
src/gmxtop/: __init__.py
tests/: conftest.py  test_parsing.py  test_topology.py
